# knowledge_base

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
doc/: cli-ai-database.md  database-architecture.md  frontend-human-usage.md  index.html  llm-extraction.md  scrape-util-scripts.md
docker/postgres/: init.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx
frontend/src/components/: ColumnFilter.tsx
frontend/src/pages/: Channels.tsx  Dashboard.tsx  Item.tsx  (+3 more)
migrations/: 001_add_patreon_source.sql  002_add_patreon_catalog.sql  003_add_yahoohk_source.sql  004_llm_provider_extraction_runs.sql  005_source_kind_blog.sql  006_consolidate_blog.sql  007_pipeline_tracking.sql  008_discovery_catalog.sql  009_has_transcript.sql  010_transcription.sql
scripts/: _verify_blog.py  backfill_has_transcript.py  build_data_readmes.py  copy_to_data_public.py  data_public_config.json  debug_article.html  debug_hkej_search.py  debug_login.html  debug_search.html  fix_yahoohk_titles.py  migrate_data_layout.py  migrate_to_blog_source.py  probe_hkej_login.py  reextract_hkej.py  retry_missing_transcripts.py  scrape_patreon.ps1  test_hkej_article.py  test_hkej_author.py  transcribe_missing.py
src/kb/: __init__.py  catalog.py  cli.py  config.py  db.py  extract.py  ingest.py  io_md.py  leaderboard.py  links.py  llm.py  logging_setup.py  progress.py  ratelimit.py
tests/: test_extract.py  test_llm.py  test_patreon.py  test_youtube.py
(+16 files in other folders)
