[project]
name = "kb"
version = "0.1.0"
description = "Personal investment knowledge base: scrape, extract, search, leaderboard."
requires-python = ">=3.11"
dependencies = [
  # core
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "rich>=13.7",
  "tenacity>=8.5",
  "httpx[http2]>=0.27",
  "aiolimiter>=1.1",
  # html / md
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "markdownify>=0.12",
  "readability-lxml>=0.8.1",
  "pyyaml>=6.0",
  "pypdf>=4.3",
  # browser automation for auth-walled sites
  "playwright>=1.45",
  # youtube
  "yt-dlp>=2024.8.6",
  "youtube-transcript-api>=0.6.2",
  # feeds / podcasts
  "feedparser>=6.0.11",
  # llm + embeddings (OpenAI compatible)
  "openai>=1.40",
  "tiktoken>=0.7",
  # db
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "alembic>=1.13",
  # api
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  # data / leaderboard
  "yfinance>=0.2.43",
  "pandas>=2.2",
  "numpy>=2.0",
  "camoufox>=0.4.11",
  "browser-cookie3>=0.20.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
kb = "kb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
